2003-01-18  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.

	- fixed 3123041 - VIP: Spewage at bottom of oregonlive.com and other similar pages

        * WebView.subproj/WebUserAgentSpoofTable.gperf: Added nj.com to spoof list
	below oregonlive.com (which was already in there). Added comment explaining the
	need to spoof a bit more.
        * WebView.subproj/WebUserAgentSpoofTable.c:
        (hash):
        (_web_findSpoofTableEntry): Regenerated.

2003-01-17  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3143656 - crash in MIMETypeForFile when a large QT movie is dragged over window

        Reviewed by darin.

        * WebView.subproj/WebControllerPrivate.m:
        (+[WebController _MIMETypeForFile:]): rewrote, now calls _web_guessedMIMEType

2003-01-17  Darin Adler  <darin@apple.com>

	- compressed all our non-compressed TIFF files

        * Resources/nullplugin.tiff:
        * Resources/url_icon.tiff:

2003-01-16  Darin Adler  <darin@apple.com>

        * WebView.subproj/WebController.h: Fixed a comment that was out of date.

2003-01-16  Chris Blumenberg  <cblu@apple.com>

	Fixed comment.

        * Plugins.subproj/WebBaseNetscapePluginView.m:

2003-01-16  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3125743 - right-click doesn't count as ctrl-click in Flash

	AppKit doesn't call mouseDown or mouseUp on right-click. Simulate control-click mouseDown and mouseUp so plug-ins get the right-click event as they do in Carbon

        Reviewed by darin.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView rightMouseDown:]):
        (-[WebBaseNetscapePluginView rightMouseUp:]):

2003-01-16  Darin Adler  <darin@apple.com>

        Reviewed by John.

	- added an API for dumping the external representation of the render tree for testing

        * Misc.subproj/WebCoreStatistics.h: Added renderTreeAsExternalRepresentation.